fix aside z-index

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -1361,6 +1361,7 @@ aside { }
         padding: 0.6em 0 0em 2em; /* Aligns asides flush right inside article__body */
         margin-top: 1em;
         margin-bottom: 2em;
+        z-index: 200;
     }
 
         .aside:has(> img) { /* Shows asides that contain img child element. 
